<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_auth"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/facultyRegisterFragment"
        android:name="com.example.guniattendancefaculty.authorization.authfragments.ui.registerfaculty.FacultyRegisterFragment"
        android:label="@string/register" />
    <fragment
        android:id="@+id/appPinFragment"
        android:name="com.example.guniattendancefaculty.authorization.authfragments.ui.apppin.AppPinFragment"
        android:label="Pin">
        <argument
            android:name="role"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.guniattendancefaculty.authorization.authfragments.ui.login.LoginFragment"
        android:label="@string/login" />
    <fragment
        android:id="@+id/launcherScreenFragment"
        android:name="com.example.guniattendancefaculty.authorization.authfragments.ui.launcherscreen.LauncherScreenFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_launcherScreenFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.example.guniattendancefaculty.authorization.authfragments.ui.splashscreen.SplashScreenFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_splashScreenFragment_to_launcherScreenFragment"
            app:destination="@id/launcherScreenFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph_auth"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.guniattendancefaculty.faculty.facultyfragments.ui.settings.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>