<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/title_here"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_date"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/select_date"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"
            app:backgroundTint="@color/color_primary"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_select_time"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/start_time"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:backgroundTint="@color/color_primary"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@id/end_select_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/end_select_time"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/end_time"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:backgroundTint="@color/color_primary"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_select_time"
            app:layout_constraintTop_toBottomOf="@id/select_date"
            app:layout_constraintBottom_toTopOf="@id/input_description"/>

        <EditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"

            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/background_border"
            android:gravity="left|top"
            android:hint="Type Comments/Description - *Not Necessary*"
            android:inputType="textMultiLine"
            android:padding="@dimen/_8sdp"
            android:scrollbars="vertical"
            android:textSize="@dimen/_16sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_select_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>