<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_animation" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="-49dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:background="@color/lightBackground"
                android:clickable="true"
                android:contentDescription="@string/image"
                android:focusable="true"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_round_person_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:strokeColor="#2D89EF"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/tv_capture_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/capture_image"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_enrol"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/enter_your_enrolment_number"
                app:layout_constraintTop_toBottomOf="@id/tv_capture_image"
                app:startIconDrawable="@drawable/ic_baseline_perm_identity_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enrollment_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/enter_your_name"
                app:layout_constraintTop_toBottomOf="@id/tl_enrol"
                app:startIconDrawable="@drawable/ic_baseline_perm_identity_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/enter_your_email_address"
                app:layout_constraintTop_toBottomOf="@id/tl_name"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_class"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tl_email">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTvClass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_class"
                    android:inputType="none"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_lab"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tl_class">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTvLab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_lab"
                    android:inputType="none"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <TextView-->
            <!--                android:id="@+id/tv_set_pin"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="16dp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:text="@string/set_pin"-->
            <!--                android:textSize="20sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/tl_lab" />-->


            <!--            <com.chaos.view.PinView-->
            <!--                android:id="@+id/pin_view"-->
            <!--                style="@style/PinWidget.PinView"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="15dp"-->
            <!--                android:cursorVisible="false"-->
            <!--                android:inputType="numberPassword"-->
            <!--                app:hideLineWhenFilled="true"-->
            <!--                app:itemCount="6"-->
            <!--                app:itemSpacing="10dp"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/tv_set_pin"-->
            <!--                app:lineColor="#2D89EF"-->
            <!--                app:lineWidth="3dp" />-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="357dp"
                android:layout_height="42dp"
                android:layout_margin="30dp"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tl_email"
                app:layout_constraintLeft_toLeftOf="@id/tl_email"
                app:layout_constraintRight_toRightOf="@+id/tl_email" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>